infra/k8s/overlays/production/backend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: task-management
spec:
  template:
    spec:
      containers:
        - name: backend
          image: registry.digitalocean.com/kkura/task-backend:backend-latest
